# 1724_final_project

./: .gitignore  README.md  proposal.md
finance/: Cargo.toml
finance/src/: analytics.rs  app.rs  main.rs  web.rs
finance/src/app/: model.rs  utils.rs
finance/src/models/: mod.rs  stock.rs  stock_list.rs
