[package]
name = "finance"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest={version="0.12.9", features=["json", "blocking"]}
ratatui="0.29"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
scraper="0.21.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
plotters = "0.3.4"
log = "0.4"
fern = "0.6"
urlencoding = "2.1"
